AST/.antlr/ANTLR/MapsParser.java
package ANTLR;// Generated from ../Maps.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MapsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOLEAN=1, STRING=2, INT=3, MAP=4, ELSE=5, IF=6, WHILE=7, RETURN=8, IMPORT=9, 
		EXPORT=10, FROM=11, WS=12, INT_LITERAL=13, BOOL_LITERAL=14, STRING_LITERAL=15, 
		JOIN_X=16, JOIN_Y=17, INSERT_X=18, INSERT_Y=19, DROP_X=20, DROP_Y=21, 
		MASK=22, MIRROR_X=23, MIRROR_Y=24, ROTATE_CW=25, ROTATE_CCW=26, IDENTIFIER=27, 
		MLPAREN=28, MRPAREN=29, LPAREN=30, RPAREN=31, LCURLY=32, RCURLY=33, HASH=34, 
		SEMI=35, COMMA=36, DOT=37, COLON=38, ASSIGN=39, GT=40, LT=41, GTE=42, 
		LTE=43, EQ=44, NEQ=45, AND=46, OR=47, NEG=48, ADD=49, SUB=50, MUL=51, 
		DIV=52, MOD=53, CONCAT=54, COMMENT=55, LINE_COMMENT=56;
	public static final int
		RULE_program = 0, RULE_impexVarChain = 1, RULE_imports = 2, RULE_exports = 3, 
		RULE_functions = 4, RULE_functionDef = 5, RULE_functionDefParams = 6, 
		RULE_primitiveType = 7, RULE_functionParams = 8, RULE_functionCall = 9, 
		RULE_rAccessor = 10, RULE_declaration = 11, RULE_primitiveDeclaration = 12, 
		RULE_variableChain = 13, RULE_mapDeclaration = 14, RULE_boolExpression = 15, 
		RULE_boolTerm = 16, RULE_boolFactor = 17, RULE_stringExpression = 18, 
		RULE_stringTerm = 19, RULE_comparisonExpression = 20, RULE_comparisonTerm = 21, 
		RULE_arithmeticExpression = 22, RULE_arithmeticTerm = 23, RULE_arithmeticFactor = 24, 
		RULE_joinOperator = 25, RULE_maskOperator = 26, RULE_mapUnaryIndexedOperator = 27, 
		RULE_mapUnaryUnindexedOperator = 28, RULE_unaryMapOperator = 29, RULE_unaryMapOperation = 30, 
		RULE_joinExpression = 31, RULE_maskExpression = 32, RULE_mapExpression = 33, 
		RULE_mapQuery = 34, RULE_coordinateChain = 35, RULE_coordinates = 36, 
		RULE_mapPropsAssignment = 37, RULE_mapPropsBody = 38, RULE_mapPropsChain = 39, 
		RULE_expression = 40, RULE_assignment = 41, RULE_regularAssignment = 42, 
		RULE_ifStatement = 43, RULE_whileStatement = 44, RULE_statement = 45, 
		RULE_block = 46;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "impexVarChain", "imports", "exports", "functions", "functionDef", 
			"functionDefParams", "primitiveType", "functionParams", "functionCall", 
			"rAccessor", "declaration", "primitiveDeclaration", "variableChain", 
			"mapDeclaration", "boolExpression", "boolTerm", "boolFactor", "stringExpression", 
			"stringTerm", "comparisonExpression", "comparisonTerm", "arithmeticExpression", 
			"arithmeticTerm", "arithmeticFactor", "joinOperator", "maskOperator", 
			"mapUnaryIndexedOperator", "mapUnaryUnindexedOperator", "unaryMapOperator", 
			"unaryMapOperation", "joinExpression", "maskExpression", "mapExpression", 
			"mapQuery", "coordinateChain", "coordinates", "mapPropsAssignment", "mapPropsBody", 
			"mapPropsChain", "expression", "assignment", "regularAssignment", "ifStatement", 
			"whileStatement", "statement", "block"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'boolean'", "'string'", "'int'", "'map'", "'else'", "'if'", "'while'", 
			"'return'", "'import'", "'export'", "'from'", null, null, null, null, 
			"'joinX'", "'joinY'", "'insertX'", "'insertY'", "'dropX'", "'dropY'", 
			"'mask'", "'mirrorX'", "'mirrorY'", "'rotateCw'", "'rotateCcw'", null, 
			"'['", "']'", "'('", "')'", "'{'", "'}'", "'#'", "';'", "','", "'.'", 
			"':'", "'='", "'>'", "'<'", "'<='", "'>='", "'=='", "'!='", "'&&'", "'||'", 
			"'!'", "'+'", "'-'", "'*'", "'/'", "'%'", "'++'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BOOLEAN", "STRING", "INT", "MAP", "ELSE", "IF", "WHILE", "RETURN", 
			"IMPORT", "EXPORT", "FROM", "WS", "INT_LITERAL", "BOOL_LITERAL", "STRING_LITERAL", 
			"JOIN_X", "JOIN_Y", "INSERT_X", "INSERT_Y", "DROP_X", "DROP_Y", "MASK", 
			"MIRROR_X", "MIRROR_Y", "ROTATE_CW", "ROTATE_CCW", "IDENTIFIER", "MLPAREN", 
			"MRPAREN", "LPAREN", "RPAREN", "LCURLY", "RCURLY", "HASH", "SEMI", "COMMA", 
			"DOT", "COLON", "ASSIGN", "GT", "LT", "GTE", "LTE", "EQ", "NEQ", "AND", 
			"OR", "NEG", "ADD", "SUB", "MUL", "DIV", "MOD", "CONCAT", "COMMENT", 
			"LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Maps.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MapsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public FunctionsContext functions() {
			return getRuleContext(FunctionsContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ExportsContext exports() {
			return getRuleContext(ExportsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapsVisitor ) return ((MapsVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			imports();
			setState(95);
			functions();
			setState(96);
			statement();
			setState(97);
			exports();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImpexVarChainContext extends ParserRuleContext {
		public Token var;
		public TerminalNode COMMA() { return getToken(MapsParser.COMMA, 0); }
		public ImpexVarChainContext impexVarChain() {
			return getRuleContext(ImpexVarChainContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(MapsParser.IDENTIFIER, 0); }
		public ImpexVarChainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impexVarChain; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).enterImpexVarChain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).exitImpexVarChain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapsVisitor ) return ((MapsVisitor<? extends T>)visitor).visitImpexVarChain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImpexVarChainContext impexVarChain() throws RecognitionException {
		ImpexVarChainContext _localctx = new ImpexVarChainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_impexVarChain);
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				((ImpexVarChainContext)_localctx).var = match(IDENTIFIER);
				setState(100);
				match(COMMA);
				setState(101);
				impexVarChain();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				((ImpexVarChainContext)_localctx).var = match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportsContext extends ParserRuleContext {
		public Token path;
		public TerminalNode IMPORT() { return getToken(MapsParser.IMPORT, 0); }
		public TerminalNode LCURLY() { return getToken(MapsParser.LCURLY, 0); }
		public ImpexVarChainContext impexVarChain() {
			return getRuleContext(ImpexVarChainContext.class,0);
		}
		public TerminalNode RCURLY() { return getToken(MapsParser.RCURLY, 0); }
		public TerminalNode FROM() { return getToken(MapsParser.FROM, 0); }
		public TerminalNode SEMI() { return getToken(MapsParser.SEMI, 0); }
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public TerminalNode STRING_LITERAL() { return getToken(MapsParser.STRING_LITERAL, 0); }
		public ImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).enterImports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).exitImports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapsVisitor ) return ((MapsVisitor<? extends T>)visitor).visitImports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportsContext imports() throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_imports);
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IMPORT:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				match(IMPORT);
				setState(106);
				match(LCURLY);
				setState(107);
				impexVarChain();
				setState(108);
				match(RCURLY);
				setState(109);
				match(FROM);
				setState(110);
				((ImportsContext)_localctx).path = match(STRING_LITERAL);
				setState(111);
				match(SEMI);
				setState(112);
				imports();
				}
				break;
			case EOF:
			case BOOLEAN:
			case STRING:
			case INT:
			case MAP:
			case IF:
			case WHILE:
			case EXPORT:
			case INT_LITERAL:
			case BOOL_LITERAL:
			case STRING_LITERAL:
			case IDENTIFIER:
			case MLPAREN:
			case LPAREN:
			case NEG:
			case SUB:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExportsContext extends ParserRuleContext {
		public TerminalNode EXPORT() { return getToken(MapsParser.EXPORT, 0); }
		public TerminalNode LCURLY() { return getToken(MapsParser.LCURLY, 0); }
		public ImpexVarChainContext impexVarChain() {
			return getRuleContext(ImpexVarChainContext.class,0);
		}
		public TerminalNode RCURLY() { return getToken(MapsParser.RCURLY, 0); }
		public TerminalNode SEMI() { return getToken(MapsParser.SEMI, 0); }
		public ExportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).enterExports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).exitExports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapsVisitor ) return ((MapsVisitor<? extends T>)visitor).visitExports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExportsContext exports() throws RecognitionException {
		ExportsContext _localctx = new ExportsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_exports);
		try {
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EXPORT:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				match(EXPORT);
				setState(118);
				match(LCURLY);
				setState(119);
				impexVarChain();
				setState(120);
				match(RCURLY);
				setState(121);
				match(SEMI);
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionsContext extends ParserRuleContext {
		public FunctionDefContext functionDef() {
			return getRuleContext(FunctionDefContext.class,0);
		}
		public FunctionsContext functions() {
			return getRuleContext(FunctionsContext.class,0);
		}
		public FunctionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).enterFunctions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).exitFunctions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapsVisitor ) return ((MapsVisitor<? extends T>)visitor).visitFunctions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionsContext functions() throws RecognitionException {
		FunctionsContext _localctx = new FunctionsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functions);
		try {
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				functionDef();
				setState(127);
				functions();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefContext extends ParserRuleContext {
		public Token name;
		public PrimitiveTypeContext primitiveType() {
			return getRuleContext(PrimitiveTypeContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(MapsParser.LPAREN, 0); }
		public FunctionDefParamsContext functionDefParams() {
			return getRuleContext(FunctionDefParamsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(MapsParser.RPAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(MapsParser.RETURN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MapsParser.SEMI, 0); }
		public TerminalNode IDENTIFIER() { return getToken(MapsParser.IDENTIFIER, 0); }
		public FunctionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).enterFunctionDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).exitFunctionDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapsVisitor ) return ((MapsVisitor<? extends T>)visitor).visitFunctionDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefContext functionDef() throws RecognitionException {
		FunctionDefContext _localctx = new FunctionDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			primitiveType();
			setState(133);
			((FunctionDefContext)_localctx).name = match(IDENTIFIER);
			setState(134);
			match(LPAREN);
			setState(135);
			functionDefParams();
			setState(136);
			match(RPAREN);
			setState(137);
			block();
			setState(138);
			match(RETURN);
			setState(139);
			expression();
			setState(140);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefParamsContext extends ParserRuleContext {
		public Token name;
		public PrimitiveTypeContext primitiveType() {
			return getRuleContext(PrimitiveTypeContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(MapsParser.COMMA, 0); }
		public FunctionDefParamsContext functionDefParams() {
			return getRuleContext(FunctionDefParamsContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(MapsParser.IDENTIFIER, 0); }
		public FunctionDefParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefParams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).enterFunctionDefParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).exitFunctionDefParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapsVisitor ) return ((MapsVisitor<? extends T>)visitor).visitFunctionDefParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefParamsContext functionDefParams() throws RecognitionException {
		FunctionDefParamsContext _localctx = new FunctionDefParamsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionDefParams);
		try {
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(142);
				primitiveType();
				setState(143);
				((FunctionDefParamsContext)_localctx).name = match(IDENTIFIER);
				setState(144);
				match(COMMA);
				setState(145);
				functionDefParams();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				primitiveType();
				setState(148);
				((FunctionDefParamsContext)_localctx).name = match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitiveTypeContext extends ParserRuleContext {
		public Token type;
		public TerminalNode BOOLEAN() { return getToken(MapsParser.BOOLEAN, 0); }
		public TerminalNode STRING() { return getToken(MapsParser.STRING, 0); }
		public TerminalNode INT() { return getToken(MapsParser.INT, 0); }
		public PrimitiveTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitiveType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).enterPrimitiveType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).exitPrimitiveType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapsVisitor ) return ((MapsVisitor<? extends T>)visitor).visitPrimitiveType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimitiveTypeContext primitiveType() throws RecognitionException {
		PrimitiveTypeContext _localctx = new PrimitiveTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_primitiveType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			((PrimitiveTypeContext)_localctx).type = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << STRING) | (1L << INT))) != 0)) ) {
				((PrimitiveTypeContext)_localctx).type = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionParamsContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(MapsParser.COMMA, 0); }
		public FunctionParamsContext functionParams() {
			return getRuleContext(FunctionParamsContext.class,0);
		}
		public FunctionParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionParams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).enterFunctionParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapsListener ) ((MapsListener)listener).exitFunctionParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapsVisitor ) return ((MapsVisitor<? extends T>)visitor).visitFunctionParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionParamsContext functionParams() throws RecognitionException {
		FunctionParamsContext _localctx = new FunctionParamsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_functionParams);
		try {
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(154);
				expression();
				setState(155);
				match(COMMA);
				setState(156);
				functionParams();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
